# goit_data_science_ml_practise

./: README.md  addressbook.pkl  main.py  pyproject.toml
lesson2/: connect.py  test.db
lesson3/topic3.1/: main.py  main_odm.py  practise.py  practise_odm.py
lesson3/topic3.2/: main.py
topic_1/: practise.py
