[project]
name = "goit-data-science-ml-practise"
version = "0.1.0"
description = ""
authors = [
    {name = "MaksimDar",email = "dovhusha.m@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime (>=6.0,<7.0)",
    "pymongo (>=4.17.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
